# xrepomirror

./: README.md  pyproject.toml  sources.yaml
.github/workflows/: publish.yml
xrepomirror/: __init__.py  __main__.py  config.py  docker_mirror.py  helm_mirror.py
